# lay

./: Cargo.toml  LICENSE
crates/: Cargo.toml
crates/lay-wayland/: Cargo.toml
crates/lay-wayland-core/: Cargo.toml
crates/lay-wayland-core/src/: lib.rs  uring.rs
crates/lay-wayland-generate/: Cargo.toml
crates/lay-wayland-generate/src/: lib.rs
crates/lay-wayland-scanner/: Cargo.toml
crates/lay-wayland-wire/: Cargo.toml
crates/lay-wayland-wire/src/: header.rs  lib.rs  wl_fixed.rs  wl_strings.rs  word.rs
crates/lay-wayland/src/: connection.rs  events.rs  lib.rs  request.rs  types.rs  utils.rs
crates/lay-wayland/src/request/: interface.rs
src/: main.rs
